--- a/.github/workflows/generate-explore.yml
+++ b/.github/workflows/generate-explore.yml
@@ -28,8 +28,7 @@ jobs:
             # Check if the download was successful
             if (Test-Path $installerPath) {
                 Write-Host "Download successful. Running the installer..."
-                $process = Start-Process -FilePath $installerPath -ArgumentList '/silent' -Wait
-                $process.PriorityClass = [System.Diagnostics.ProcessPriorityClass]::BelowNormal
+                Start-Process -FilePath $installerPath -ArgumentList '/silent' -Wait
                 Start-Sleep -Seconds 10
             } else {
                 Write-Host "Failed to download the Arc browser installer."
