attemp to set priority in cli

--- a/.github/workflows/run-regression.yml
+++ b/.github/workflows/run-regression.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: testdriverai/action@main
         with:
           key: ${{ secrets.TESTDRIVER_API_KEY }}
-          branch: profile-testdriverai
+          # branch: profile-testdriverai
           prompt: 1. /run testdriver/${{ matrix.test }} 
           prerun: |
             Get-NetIPAddress -AddressFamily IPv6
