--- a/.github/workflows/generate-regression.yml
+++ b/.github/workflows/generate-regression.yml
@@ -48,7 +48,9 @@ jobs:
       - uses: testdriverai/action@main
         with:
           key: ${{ secrets.TESTDRIVER_API_KEY }}
-          prompt: ${{ env.MARKDOWN_CONTENT }}  # Use the content of the file from the environment
+          prompt: | 
+            1. /run testdriver/onboarding.yml
+            ${{ env.MARKDOWN_CONTENT }}  # Use the content of the file from the environment
           prerun: |
             Get-NetIPAddress -AddressFamily IPv6
             # URL for the Arc browser installer
@@ -66,9 +68,12 @@ jobs:
             } else {
                 Write-Host "Failed to download the Arc browser installer."
             }
-
-            # Replace placeholder email with generated
-            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}-${{ github.run_attempt }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
+            
+            # Get current timestamp in yyyyMMddHHmmss format
+            $timestamp = Get-Date -Format "yyyyMMddHHmmss"
+            
+            # Replace placeholder email with a unique email using timestamp
+            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", "test-$timestamp@testdriver.ai" | sc -Force ./testdriver/onboarding.yml
           create-pr: true
           pr-title: "TestDriver.ai / Generate Test / ${{ matrix.markdown }}"
           pr-branch: testdriver/generate-test-${{ github.run_id }}-${{ github.run_attempt }}
