--- a/.github/workflows/generate-regression.yml
+++ b/.github/workflows/generate-regression.yml
@@ -74,7 +74,7 @@ jobs:
 
           create-pr: true
           pr-title: "TestDriver.ai / Generate Test / ${{ matrix.markdown }}"
-          pr-branch: testdriver/generate-test-${{ github.run_id }}-${{ github.run_attempt }}
+          pr-branch: testdriver/regression-${{ matrix.markdown }}-${{ github.run_id }}-${{ github.run_attempt }}
           pr-test-filename: ${{matrix.markdown}}.yml
         env:
           FORCE_COLOR: "3"
