--- a/.github/workflows/generate-regression.yml
+++ b/.github/workflows/generate-regression.yml
@@ -70,7 +70,7 @@ jobs:
             }
 
             # Replace placeholder email with generated
-            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}.${{ github.run_attempt }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
+            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}${{ github.run_attempt }}.${{ matrix.markdown }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
 
           create-pr: true
           pr-title: "TestDriver.ai / Generate Test / ${{ matrix.markdown }}"
