--- a/.github/workflows/manual-explore.yml
+++ b/.github/workflows/manual-explore.yml
@@ -16,7 +16,7 @@ on:
           2. /generate desktop 10
 
 jobs:
-  generate:
+  manual:
     runs-on: ubuntu-latest
     steps:
       - uses: testdriverai/action@main
@@ -39,10 +39,7 @@ jobs:
                 Start-Sleep -Seconds 10
             } else {
                 Write-Host "Failed to download the Arc browser installer."
-           
-            
-            # Replace placeholder email with generated
-            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}${{ github.run_attempt }}.${{ matrix.markdown }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
+            }
           create-pr: true
           pr-title: "TestDriver.ai / Generate Test Plans"
           pr-branch: testdriver/generate-${{ github.run_id }}-${{ github.run_attempt }}
