--- a/.github/workflows/generate-regression.yml
+++ b/.github/workflows/generate-regression.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           key: ${{ secrets.TESTDRIVER_API_KEY }}
           prompt: | 
-            1. /run testdriver/onboarding.yml
+            1. /run testdriver/login.yml false false
             ${{ env.MARKDOWN_CONTENT }}  # Use the content of the file from the environment
           prerun: |
             Get-NetIPAddress -AddressFamily IPv6
@@ -68,10 +68,6 @@ jobs:
             } else {
                 Write-Host "Failed to download the Arc browser installer."
             }
-
-            # Replace placeholder email with generated
-            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}${{ github.run_attempt }}.${{ matrix.markdown }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
-
           create-pr: true
           pr-title: "TestDriver.ai / Generate Test / ${{ matrix.markdown }}"
           pr-branch: testdriver/regression-${{ matrix.markdown }}-${{ github.run_id }}-${{ github.run_attempt }}
