--- a/.github/workflows/run-regression.yml
+++ b/.github/workflows/run-regression.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           key: ${{ secrets.TESTDRIVER_API_KEY }}
           prompt: | 
-            1. /run testdriver/onboarding.yml
+            1. /run testdriver/login.yml false false
             1. /run testdriver/${{ matrix.test }} 
           prerun: |
             Get-NetIPAddress -AddressFamily IPv6
@@ -62,9 +62,6 @@ jobs:
             } else {
                 Write-Host "Failed to download the Arc browser installer."
             }
-            # Replace placeholder email with generated
-            (gc ./testdriver/onboarding.yml) -replace "placeholder@testdriver.ai", '${{ github.run_id }}${{ github.run_attempt }}.${{ matrix.markdown }}@testdriver.ai' | sc -Force ./testdriver/onboarding.yml
-
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FORCE_COLOR: "3"
