--- a/testdriver/login.yml
+++ b/testdriver/login.yml
@@ -8,4 +8,31 @@ steps:
         description: right arrow button in the Arc browser
         action: click
         method: turbo
-  
+  - prompt: >-
+      /explore complete the arc onboarding. when asked to log in, use the email
+      11354345965.1@testdriver.ai and password FakePassword123
+    commands:
+    - command: hover-text
+      text: Sign In
+      description: sign-in link on the onboarding page
+      action: click
+    - prompt: >-
+        /explore complete the arc onboarding. when asked to log in, use the email
+        11354345965.1@testdriver.ai and password FakePassword123
+        commands:
+    - command: hover-text
+      text: Email
+      description: email input field
+      action: click
+    - command: type
+      text: 11354345965.1@testdriver.ai
+    - command: hover-text
+      text: Password
+      description: password input field
+      action: click
+    - command: type
+      text: FakePassword123
+    - command: hover-text
+      text: Sign In
+      description: sign-in button
+      action: click
